# garage-matter

./: LICENSE  README.md
esp32/: .gitignore  CMakeLists.txt  Makefile
esp32/components/entrance-gate/: CMakeLists.txt  main.c
esp32/main/: main.c
